--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,9 +25,10 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
-file.reference.dotenv-java-3.2.0.jar=/home/alan/Downloads/ferramentas-para-projeto-java/dotenv-java-3.2.0.jar
-file.reference.mysql-connector-j-9.2.0.jar=/home/alan/Downloads/ferramentas-para-projeto-java/mysql-connector-j-9.2.0-1.sl15.src/mysql-connector-j-9.2.0/mysql-connector-j-9.2.0.jar
+file.reference.dotenv-java-3.2.0.jar=../../Downloads/ferramentas-para-projeto-java/dotenv-java-3.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar=../../Downloads/ferramentas-para-projeto-java/mysql-connector-j-9.2.0-1.sl15.src/mysql-connector-j-9.2.0/mysql-connector-j-9.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +39,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.2.0.jar}:\
-    ${file.reference.dotenv-java-3.2.0.jar}
+    ${file.reference.dotenv-java-3.2.0.jar}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -65,7 +67,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -81,6 +82,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=site.war
+war.name=serenitas.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
