--- a/build.xml
+++ b/build.xml
@@ -1,71 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="serenitas" default="default" basedir=".">
-    <description>Builds, tests, and runs the project serenitas.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<project name="serenitas" default="dist" basedir=".">
+    <description>Build and package the Serenitas project</description>
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+    <!-- Diretórios -->
+    <property name="src.dir" value="src"/>
+    <property name="build.dir" value="build/classes"/>
+    <property name="lib.dir" value="lib"/>
+    <property name="web.dir" value="web"/>
+    <property name="dist.dir" value="dist"/>
+    <property name="dist.web.dir" value="${dist.dir}/WEB-INF"/>
 
-      -pre-init:                 called before initialization of project properties 
-      -post-init:                called after initialization of project properties 
-      -pre-compile:              called before javac compilation 
-      -post-compile:             called after javac compilation 
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-dist:                 called before archive building 
-      -post-dist:                called after archive building 
-      -post-clean:               called after cleaning build products 
-      -pre-run-deploy:           called before deploying
-      -post-run-deploy:          called after deploying
+    <!-- Classpath com todos os JARs da lib -->
+    <path id="project.classpath">
+        <fileset dir="${lib.dir}" includes="**/*.jar"/>
+    </path>
 
-    Example of pluging an obfuscator after the compilation could look like 
+    <!-- Limpar builds antigos -->
+    <target name="clean">
+        <delete dir="${build.dir}"/>
+        <delete dir="${dist.dir}"/>
+    </target>
 
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
+    <!-- Compilar código Java -->
+    <target name="compile" depends="clean">
+        <mkdir dir="${build.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false" classpathref="project.classpath" />
+    </target>
 
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
+    <!-- Montar estrutura para deploy -->
+    <target name="prepare-dist" depends="compile">
+        <mkdir dir="${dist.web.dir}/lib"/>
+        <mkdir dir="${dist.web.dir}/classes"/>
 
+        <!-- Copiar JARs para WEB-INF/lib -->
+        <copy todir="${dist.web.dir}/lib">
+            <fileset dir="${lib.dir}" includes="**/*.jar"/>
+        </copy>
 
-    Other way how to customize the build is by overriding existing main targets.
-    The target of interest are: 
+        <!-- Copiar classes compiladas para WEB-INF/classes -->
+        <copy todir="${dist.web.dir}/classes">
+            <fileset dir="${build.dir}"/>
+        </copy>
 
-      init-macrodef-javac:    defines macro for javac compilation
-      init-macrodef-junit:   defines macro for junit execution
-      init-macrodef-debug:    defines macro for class debugging
-      do-dist:                archive building
-      run:                    execution of project 
-      javadoc-build:          javadoc generation 
+        <!-- Copiar arquivos estáticos da web (JSP, CSS, etc) -->
+        <copy todir="${dist.dir}">
+            <fileset dir="${web.dir}"/>
+        </copy>
+    </target>
 
-    Example of overriding the target for project execution could look like 
+    <!-- Build final para deploy -->
+    <target name="dist" depends="prepare-dist">
+        <echo>Projeto compilado e pronto na pasta 'dist/' para deploy.</echo>
+    </target>
 
-        <target name="run" depends="<PROJNAME>-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that overridden target depends on jar target and not only on 
-    compile target as regular run target does. Again, for list of available 
-    properties which you can use check the target you are overriding in 
-    nbproject/build-impl.xml file. 
-
-    -->
 </project>
