--- a/web/.env.example
+++ b/web/.env.example
@@ -1,8 +1,8 @@
 # Database connection URL (MySQL example)
-DB_URL=jdbc:mysql://localhost:3306/your_database_name
+DB_URL=jdbc:mysql://localhost:3306/serenitas_db
 
 # Database username
-DB_USER=your_database_user
+DB_USER=root
 
 # Database password
-DB_PASSWORD=your_database_password
+DB_PASSWORD=verysecret
